# dudo-game

./: Cargo.toml  README.md
dudo/: Cargo.toml
dudo/src/: events.rs  lib.rs  main.rs  resources.rs
dudo/src/components/: bid.rs  dice.rs  event_systems.rs  mod.rs  player.rs
dudo/src/systems/: challenge.rs  mod.rs  place_bid.rs  roll_dice.rs
game-core/: Cargo.toml
game-core/src/: components.rs  helpers.rs  lib.rs  systems.rs
game-engine/: Cargo.toml
game-engine/src/: entity_builder.rs  error.rs  event_queue.rs  lib.rs  query.rs  world.rs
programs/: Cargo.toml
programs/src/: helpers.rs  lib.rs
programs/src/instructions/: create_game.rs  mod.rs
src/: helpers.rs  lib.rs
src/instructions/: create_game.rs
src/state/: game.rs
